Ensure caption is not chopped off of slide due to ellipsis overflow work.

--- a/source/components/slide-show.scss
+++ b/source/components/slide-show.scss
@@ -101,6 +101,7 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        flex-shrink: 0;
 
         @media (max-width: 950px) {
           font-size: $font-size-small;
